objects/Merchandise__c.object
<CustomObject>
    <label>Merchandise</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Merchandise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchandises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Womens</fullName>
                </value>
                <value>
                    <fullName>Mens</fullName>
                </value>
                <value>
                    <fullName>Kids</fullName>
                </value>
                <value>
                    <fullName>Gear</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
</CustomObject>